Issues with input button overflow resolved and middleware issue resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@ a {
 .form_Item input[type="password"],
 .form_Item input[type='select'],
 .form_Item textarea {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   font-size: 14px;
   border: 1px solid var(--primaryDark);
